# qusc-db

./: .eslintrc.js  .gitignore  README.md  index.html  package-lock.json  package.json  test-connection-sync.html  test_limit_logic.js  test_mcp_streaming.js  tsconfig.json  vite.config.js
.claude/: settings.local.json
doc/: PostgreSQL_Support.md  README.md  adapter-development-guide.md  api-reference.md  testing-guide.md  全局重构方案.md
doc/workspace/: todo.md
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/ai/: deepseek.rs  mod.rs
src-tauri/src/database/: adapter.rs  enhanced_commands.rs  enhanced_types.rs  mod.rs  mongodb.rs  mysql.rs  postgres.rs  postgresql.rs  redis.rs  test_adapter.rs
src-tauri/src/database/enhanced_types/: tests.rs
src-tauri/src/database/test_adapter/: adapter_tests.rs
src-tauri/src/mcp/: context.rs  mod.rs  server.rs  types.rs
src-tauri/src/mcp/tools/: enhanced_context.rs  mod.rs  smart_query.rs  sql_validation.rs
src-tauri/tests/: integration_tests.rs
src/components/ai/: MarkdownRenderer.vue  SmartChatInterface.vue
src/components/common/: ContextMenu.vue  DatabaseTreeNode.vue  Icon.vue
src/components/database-renderers/: AdaptiveQueryViewer.vue  CellValueRenderer.vue  JsonRenderer.vue  MongoDBRenderer.vue  RedisRenderer.vue  RelationalTableRenderer.vue  SmartQueryEditor.vue  UIThemeManager.vue
src/components/dialog/: AIConfigFormDialog.vue  BaseDialog.vue  ConfirmDialog.vue  ConnectionFormDialog.vue  index.vue  (+6 more)
src/composables/: .gitkeep  useAISidebarResize.js  useAdvancedSQLCompletion.js  useBatchUpdate.js  useCodeMirror.js  useContextMenu.ts  useDataExport.js  useDataImport.js  useDataValidation.js  useEditingStrategy.js  useEditorConfig.js  useMCP.js  useMCPWorkflow.js  useMongoDBOperationManager.ts  useMySQLOperationManager.ts  usePersistence.js  usePostgreSQLOperationManager.ts  useRedisOperationManager.ts  useResultEditor.js  useSQLParser.js  useShortcuts.js  useTableReference.js  useTableSchema.js  useTheme.js
src/services/: databaseService.js
src/stores/: ai.js  connection.js  notification.js  queryHistory.js  theme.js
src/styles/: main.scss
src/types/: contextMenu.ts
src/utils/: encryption.js  sqlFormatter.js  syntaxHighlighter.js
tests/: pagination.test.js
(+96 files in other folders)
