[package]
name = "qusc-db"
version = "0.1.0"
edition = "2021"

# 使用默认的源代码路径 src/main.rs
[[bin]]
name = "qusc-db"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
# Tauri 核心
tauri = { version = "2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

# 数据库连接
mysql_async = "0.34"
redis = { version = "0.24", features = ["tokio-comp"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }
postgres-types = { version = "0.2", features = ["derive", "with-uuid-1"] }
deadpool-postgres = "0.13"

# HTTP 客户端 (AI API)
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# 日志和错误处理
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"

# 异步特征
async-trait = "0.1"

# 实用工具
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"

# MCP 相关依赖
lru = "0.12"
regex = "1.0"
log = "0.4"
