[package]
name = "qusc-db"
version = "0.2.0"
edition = "2021"

# 使用默认的源代码路径 src/main.rs
[[bin]]
name = "qusc-db"
path = "src/main.rs"

[lib]
name = "qusc_db"
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
# Tauri 核心
tauri = { version = "2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

# 数据库连接
mysql_async = "0.34"
redis = { version = "0.24", features = ["tokio-comp"] }

# PostgreSQL 支持
tokio-postgres = "0.7"
postgres-types = { version = "0.2", features = ["derive"] }
deadpool-postgres = "0.12"

# MongoDB 支持
mongodb = "2.8"
bson = "2.9"

# HTTP 客户端 (AI API)
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# 日志和错误处理
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"

# 异步特征
async-trait = "0.1"
futures = "0.3"

# 实用工具
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# MCP 相关依赖
lru = "0.12"
regex = "1.0"
log = "0.4"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
